kubernetes/rubrik/applications/home-assistant/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: home-assistant
      app.kubernetes.io/name: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: home-assistant
        app.kubernetes.io/name: home-assistant
    spec:
      automountServiceAccountToken: true
      hostNetwork: true
      containers:
        - image: 'ghcr.io/home-assistant/home-assistant:2024.7.3'
          imagePullPolicy: IfNotPresent
          name: home-assistant
          ports:
            - containerPort: 8123
              name: http
              protocol: TCP
            - containerPort: 5353
              name: homekit-udp
              protocol: UDP
            - containerPort: 21063
              name: homekit-tcp
              protocol: TCP
          volumeMounts:
          - mountPath: /config
            name: config
          resources:
            limits:
              cpu: 1000m
        - image: ghcr.io/coder/code-server:4.19.0
          imagePullPolicy: IfNotPresent
          name: codeserver
          args:
            - "--auth"
            - "none"
            - "--port"
            - "12321"
            - "/config"
          ports:
            - containerPort: 12321
              name: codeserver
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
          securityContext:
            runAsUser: 0
            runAsGroup: 0
          resources:
            limits:
              cpu: 1000m
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: home-assistant-config
