kubernetes/rubrik/applications/home-assistant/base/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-lb-tcp
  annotations:
    metallb.universe.tf/address-pool: bgp-pool
    metallb.universe.tf/allow-shared-ip: hass
spec:
  selector:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
  loadBalancerIP: 172.19.0.3
  externalTrafficPolicy: Local
  type: LoadBalancer
  ports:
  - name: http
    port: 8123
    protocol: TCP
    targetPort: http
  - name: homekit-tcp
    port: 21063
    protocol: TCP
    targetPort: homekit-tcp
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-lb-udp
  annotations:
    metallb.universe.tf/address-pool: bgp-pool
    metallb.universe.tf/allow-shared-ip: hass
spec:
  selector:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
  loadBalancerIP: 172.19.0.3
  externalTrafficPolicy: Local
  type: LoadBalancer
  ports:
  - name: homekit-udp
    port: 5353
    protocol: UDP
    targetPort: homekit-udp
---
apiVersion: v1
kind: Service
metadata:
  name: codeserver
spec:
  selector:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
  type: ClusterIP
  ports:
  - name: codeserver
    port: 12321
    protocol: TCP
    targetPort: codeserver
