kubernetes/rubrik/applications/home-assistant/base/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/target: 'burrell.tech'
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: hass.burrell.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant-lb-tcp
            port:
              name: http
  tls:
  - hosts:
    - hass.burrell.tech
    secretName: hass.burrell.tech-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-codeserver-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.0.0/16,172.16.0.0/12"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    external-dns.alpha.kubernetes.io/exclude: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: code.hass.burrell.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: codeserver
            port:
              name: codeserver
  tls:
  - hosts:
    - code.hass.burrell.tech
    secretName: code.hass.burrell.tech-tls
